--- a/container_playbook.yml
+++ b/container_playbook.yml
@@ -6,7 +6,7 @@
     - name: Create a color container
       containers.podman.podman_container:
         name: colors
-        image: docker.io/mmumshad/simple-webapp-color:latest
+        image: quay.io/acme_corp/eda-app:suncavanaugh
         state: started
         recreate: true
         network: bridge
