--- a/container_node2.yml
+++ b/container_node2.yml
@@ -1,6 +1,6 @@
 ---
 - name: Playbook to setup prereqs
-  hosts: node2
+  hosts: all
   become: true
   tasks:
     - name: Create a color container
