--- a/container_node2.yml
+++ b/container_node2.yml
@@ -27,6 +27,8 @@
         env:
             APP_COLOR: "{{ color }}"
             tree: "{{ tree }}"
+      register: container
+      
     - name: Print container
       debug:
         var: container
