--- a/deploy.yml
+++ b/deploy.yml
@@ -15,7 +15,7 @@
     container_port: 8080
     # if the incoming git event is that of a pull request,
     # set the name of the container to reflect a dev deployment
-    container_name: "{{ 'colors-dev' if event.etype == 'pull_request' else 'colors' }}"
+    container_name: "{{ 'colors' }}"
     repo_pusher:    "{{ event.eauthor }}"
     repo_ref:       "{{ event.eref }}"
     
